--- a/recipes.html
+++ b/recipes.html
@@ -111,7 +111,7 @@
             <span>Source: New York Times Cooking</span>
             <span>Category: Main Dish</span>
 
-            <img src="images/shrimp scampi.jpg" width = "400" alt="">
+            <img src="images/shrimp_scampi.jpg" width = "400" alt="">
             <p>
                 Shrimp scampi is a classic Italian-American delight, where succulent shrimp meet a medley of garlic, butter, and white wine. Sautéed to pink perfection, the shrimp mingle with a fragrant blend of garlic and red pepper flakes. A drizzle of white wine and a squeeze of lemon create a luxurious sauce, embracing the dish's linguine base. With a sprinkle of parsley, it's a harmonious, flavorful masterpiece that exemplifies both simplicity and taste.
             </p>
@@ -138,9 +138,9 @@
             </ol>
 
             <h3>Additional Food images</h3>
-            <img src="images/pasta cooking.jpg" width = "200" alt="Pasta being lifted by a fork in a pot of boiling water. It is almost finished cooking">
-            <img src="images/shrimp scampi cooking.jpg" width = "200" alt="Shrimp cooking in a sauce of butter and wine. It is being stirred with a spoon">
-            <img src="images/shrimp cooking.jpg" width = "200" alt="Shrimp is cooking until it is pink"> 
+            <img src="images/pasta_cooking.jpg" width = "200" alt="Pasta being lifted by a fork in a pot of boiling water. It is almost finished cooking">
+            <img src="images/shrimp_scampi_cooking.jpg" width = "200" alt="Shrimp cooking in a sauce of butter and wine. It is being stirred with a spoon">
+            <img src="images/shrimp_cooking.jpg" width = "200" alt="Shrimp is cooking until it is pink"> 
             <!--  Anna Torell -->
         </div>
     </main>
