--- a/pets.html
+++ b/pets.html
@@ -167,7 +167,7 @@
         <div>
             <h2>Bear</h2>
 
-            <img src="images/bear_squish.JPG" width="400" alt="bear smirking" />
+            <img src="images/bear_squish.JPG" width="400" alt="bear smirking">
 
             <p> 
                 Bear, the sun-loving canine, is a true beach bum at heart. When the warm rays of the sun grace the sandy shores, you can always find Bear sprawled out, basking in the golden glow. His eyes squint with contentment as he soaks up the sun's warmth, his fluffy coat glistening in the sunlight. Bear's love for sunbathing is unmatched, and he'll stay put until his fur is toasty warm.
@@ -176,10 +176,10 @@
                 However, there's one thing Bear despises more than a cold, rainy day–leashes. The moment his owner attempts to clip on that restraining contraption, Bear's ears droop, and his tail tucks between his legs. He's got a knack for escaping from them, making it a constant struggle for his human to keep him under control during walks. With a mischievous glint in his eyes and a sly smirk, Bear prefers the freedom of the great outdoors, unburdened by a leash.
             </p>
             <h3>Photo Gallery</h3>
-            <img src="images/bear.JPG" width="200" alt="happy bear" />
-            <img src="images/bear_sunbathing.jpeg" width="200" alt="bear sunbathing" />
-            <img src="images/bear_leash.jpeg" width="200" alt="bear back" />
-            <img src="images/bear_lazy.JPG" width="200" alt="bear on leash" />
+            <img src="images/bear.JPG" width="200" alt="happy bear">
+            <img src="images/bear_sunbathing.jpeg" width="200" alt="bear sunbathing">
+            <img src="images/bear_leash.jpeg" width="200" alt="bear back">
+            <img src="images/bear_lazy.JPG" width="200" alt="bear on leash">
 
             <h3>Likes</h3>
             <ul>
@@ -196,7 +196,7 @@
                 alt="Beautiful Yorkshire ready to strike"
                 width="400"
                 height="400"
-            />
+            >
             <p> 
                 Mini is a 10 year old yorkshire terrier who’s grown up along with me. She enjoys playing and taking baths and is the sweetest dog you could ask for. My mom brought her from a shelter in Ecuador when she was just a couple of months old and even though it was over ten years ago, I remember that day like it was yesterday.
             </p>
@@ -209,28 +209,28 @@
                 alt="Mini riding in a car"
                 width="200"
                  height="200"
-            />
+            >
 
             <img
                 src="images/mini1.jpg"
                 alt="Mini being spoiled in a car"
                 width="200"
                 height="200"
-            />
+            >
 
             <img
                 src="images/mini2.jpg"
                 alt="Mini waking up from a nap"
                 width="200"
                 height="200"
-            />
+            >
             
             <img
                 src="images/mini3.jpg"
                 alt="Mini waking up from a nap again"
                 width="200"
                 height="200"
-            />
+            >
 
             <h3>Likes</h3>
             <ul>
